# ArduinoVelo

./: .gitignore  ArduiVelo.qmlproject.qtds  CMakeLists.txt  CountersWidget.qml  CountersWidgetForm.ui.qml  QArduinoVelo.cpp  QArduinoVelo.h  main.cpp  main.qml
